--- a/test.html
+++ b/test.html
@@ -43,8 +43,8 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Additional Settings</h1>
-				<h3>Delivery Date Settings</h3>
+				<h1>Delivery Date Settings</h1>
+				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
 					<div class="fieldsets-batch">
@@ -68,7 +68,7 @@
 				<div class="form-area__action">
 					<button type="button" onclick="onSaveClick()" class="btn btn-primary btn-medium">Save</button>
 				</div>
-				<h3>Blockout Date Settings</h3>
+				<h3>Add Blockout Date</h3>
 
 				<div class="form-area__content">
 					<p>Blocks out dates from storefront (Work in Progress)</p>
