--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
 				<h3>Add Blockout Date</h3>
 
 				<div class="form-area__content">
-					<p>Blocks out dates from storefront (Work in Progress)</p>
+					<p>Blocks out delivery dates from storefront</p>
 					<table id="blockout-table">
 						<tr>
 						<th>Blockout Date </th>
