--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Delivery Date Settings V3.2</h1>
+				<h1>Delivery Date Settings V3.3</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -177,7 +177,7 @@
 	function addInventoryDate(date){
 		if (date){
 			var xhttp = new XMLHttpRequest();
-			var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/products"
+			var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/products?token="+accessToken
 
 			krslog("GET:requestURL:" + requestURL);
 			xhttp.open("GET", requestURL, true);
