--- a/test.html
+++ b/test.html
@@ -191,10 +191,16 @@
 					var apiResponse = xhttp.responseText;
 					var products = JSON.parse(apiResponse);
 					krslog("Success: GET success (" + products.count + " / " + products.total);
+					var new_item_div = $('<div>');
+					new_item_div.addClass('a-card');
+					
 					for (var i = 0 ; i < products.items.length; i++){
+						
 						krslog(products.items[i].id);	
 						krslog(products.items[i].name);
 					}
+					$('#inventory_div').append(new_item_div);
+					$('#inventory_div').append($('<br>'));
 				}
 			};	
 		}
