--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Delivery Date Settings V3.6</h1>
+				<h1>Delivery Date Settings V3.7</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -94,26 +94,16 @@
 				<div class="form-area__action">
 					<button type="button" onclick="onAddClick()" class="btn btn-primary btn-medium">Add</button>
 				</div>
-				<h3>Add Inventory</h3>
-				<p>Add Inventory at the point of date</p>
-				<div id="inventory_div">
-				</div>
+				<h3>SKU Settings</h3>
 				<div class="form-area__content">
-					<div class="fieldsets-batch">
-						<div class="fieldset">
-							<div class="field field--medium">
-								<label class="field__label">Date</label>
-								<input id="inventory_date" type="text" class="field__input" tabindex="4" maxlength="64">
-								<div class="field__placeholder">Date</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-				<div class="form-area__action">
-					<button type="button" onclick="onInvAddClick()" class="btn btn-primary btn-medium">Add</button>
-				</div>
-
+					<p>Select SKU to be inventorised</p>
+					<table id="sku-table">
+						<tr>
+						<th>ID</th>
+						<th>Name</th>
+						<th></th>
+						</tr>
+					</table>
 				</div>
 				<h5>Log:</h5>
 				<p id="krstest"></p>
@@ -129,14 +119,55 @@
 		$( "#order_date" ).datepicker({dateFormat: "dd M yy"});
 		$( "#blockout_date" ).datepicker({dateFormat: "dd M yy"});
 		$( "#inventory_date" ).datepicker({dateFormat: "dd M yy"});
-
+		populateSkuTable();
 		EcwidApp.getAppPublicConfig(function(publicData) {
 			krslog("EcwidApp.getAppPublicConfig Success");
 			krslog(publicData);
 		
 			loadBlockoutDates(publicData);
+			loadSKU(publicData);
 		});
 	});
+	function populateSkuTable(){
+		var xhttp = new XMLHttpRequest();
+		var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/products?token="+accessToken
+
+		krslog("GET:requestURL:" + requestURL);
+		xhttp.open("GET", requestURL, true);
+		xhttp.send();
+
+		xhttp.onreadystatechange = function() {
+
+			krslog("xhttp.readyState = " + xhttp.readyState);
+			krslog("xhttp.status = " + xhttp.status);
+			if (xhttp.readyState == 4 && xhttp.status == 200) {
+				var apiResponse = xhttp.responseText;
+				var products = JSON.parse(apiResponse);
+				krslog("Success: GET success (" + products.count + " / " + products.total + ")");				
+				for (var i = 0 ; i < products.items.length; i++){
+					$checkbox = $('<input id = "sku-' + items.id + '-checkbox">');
+					$checkbox.addClass('custom-checkbox__input');
+					$checkbox.prop('checked', false);
+					$checkbox.change(function() {
+						pushToStorage();
+					    });
+					var $tr = $('<tr>').append(
+							$('<td>').text(items.id),
+							$('<td>').text(items.name),
+							$('<td>').append($checkbox));
+					$tr.appendTo('#sku-table');	
+				}
+			}
+		};	
+	}
+	function loadSKU(data){
+		var parsed_data = JSON.parse(data).sku;
+		for (var i = 0; i < parsed_data.length; i++) { 
+			var id_str = "sku-" + parsed_data[i] + "-checkbox"
+			$("#"+id_str).prop('checked', true);
+		}
+	}
+	
 	function loadBlockoutDates(data){
 		var parsed_data = JSON.parse(data).blockout_dates;
 
@@ -176,34 +207,7 @@
 	}
 	function addInventoryDate(date){
 		if (date){
-			var xhttp = new XMLHttpRequest();
-			var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/products?token="+accessToken
-
-			krslog("GET:requestURL:" + requestURL);
-			xhttp.open("GET", requestURL, true);
-			xhttp.send();
-
-			xhttp.onreadystatechange = function() {
-
-				krslog("xhttp.readyState = " + xhttp.readyState);
-				krslog("xhttp.status = " + xhttp.status);
-				if (xhttp.readyState == 4 && xhttp.status == 200) {
-					var apiResponse = xhttp.responseText;
-					var products = JSON.parse(apiResponse);
-					krslog("Success: GET success (" + products.count + " / " + products.total + ")");
-					$new_inv_div = $('<div>');
-					$new_inv_div.addClass('a-card');
-
-
-					for (var i = 0 ; i < products.items.length; i++){
-						
-						krslog(products.items[i].id);	
-						krslog(products.items[i].name);
-					}
-					$('#inventory_div').append($new_inv_div);
-					$('#inventory_div').append($('<br>'));
-				}
-			};	
+			
 		}
 	}
 	function onInvAddClick(){
