--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Delivery Date Settings V3.7</h1>
+				<h1>Delivery Date Settings V3.8</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -145,15 +145,15 @@
 				var products = JSON.parse(apiResponse);
 				krslog("Success: GET success (" + products.count + " / " + products.total + ")");				
 				for (var i = 0 ; i < products.items.length; i++){
-					$checkbox = $('<input id = "sku-' + items.id + '-checkbox">');
+					$checkbox = $('<input id = "sku-' + products.items[i].id + '-checkbox">');
 					$checkbox.addClass('custom-checkbox__input');
 					$checkbox.prop('checked', false);
 					$checkbox.change(function() {
 						pushToStorage();
 					    });
-					var $tr = $('<tr>').append(
-							$('<td>').text(items.id),
-							$('<td>').text(items.name),
+					$tr = $('<tr>').append(
+							$('<td>').text(products.items[i].id),
+							$('<td>').text(products.items[i].name),
 							$('<td>').append($checkbox));
 					$tr.appendTo('#sku-table');	
 				}
