--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Delivery Date Settings V3.8</h1>
+				<h1>Delivery Date Settings V3.9</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -145,8 +145,9 @@
 				var products = JSON.parse(apiResponse);
 				krslog("Success: GET success (" + products.count + " / " + products.total + ")");				
 				for (var i = 0 ; i < products.items.length; i++){
-					$checkbox = $('<input id = "sku-' + products.items[i].id + '-checkbox">');
-					$checkbox.addClass('custom-checkbox__input');
+					$checkbox = $('<input id = "skucheckbox-' + products.items[i].id );
+					$checkbox.addClass('custom-checkbox__input');					
+					$checkbox.addClass('skucheckbox');
 					$checkbox.prop('checked', false);
 					$checkbox.change(function() {
 						pushToStorage();
@@ -163,7 +164,7 @@
 	function loadSKU(data){
 		var parsed_data = JSON.parse(data).sku;
 		for (var i = 0; i < parsed_data.length; i++) { 
-			var id_str = "sku-" + parsed_data[i] + "-checkbox"
+			var id_str = "skucheckbox-" + parsed_data[i] ;
 			$("#"+id_str).prop('checked', true);
 		}
 	}
@@ -221,6 +222,10 @@
 		var list_of_dates = [];
 		$('.blockoutdate').each(function() {		
 		    list_of_dates.push($(this).text());
+		});
+		var list_of_sku = [];
+		$('.skucheckbox').each(function() {		
+		    list_of_sku.push($(this).attr('id').substring(12));
 		});
 		
 		to_push['blockout_dates'] = list_of_dates;
