--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h1>Delivery Date Settings V3.12</h1>
+				<h1>Delivery Date Settings V3.14</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -162,20 +162,26 @@
 		};	
 	}
 	function loadSKU(data){
-		var parsed_data = JSON.parse(data).sku;
-		for (var i = 0; i < parsed_data.length; i++) { 
-			var id_str = "skucheckbox-" + parsed_data[i] ;
-			$("#"+id_str).prop('checked', true);
+
+		var parsed_data = JSON.parse(data);
+		if ('sku' in parsed_data){
+			parsed_data = parsed_data.sku;
+			for (var i = 0; i < parsed_data.length; i++) { 
+				var id_str = "skucheckbox-" + parsed_data[i] ;
+				$("#"+id_str).prop('checked', true);
+			}
 		}
 	}
 	
 	function loadBlockoutDates(data){
-		var parsed_data = JSON.parse(data).blockout_dates;
-
-		for (var i = 0; i < parsed_data.length; i++) { 
+		var parsed_data = JSON.parse(data);
+		if ('blockout_dates' in parsed_data){
+			parsed_data = parsed_data.blockout_dates;
+			for (var i = 0; i < parsed_data.length; i++) { 
 			var date = new Date();
 			date.setTime(parsed_data[i]);
 			addBlockoutDate(date);
+			}
 		}
 	}
 	function krslog(text){
