--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V3.35</h1>
+				<h1>Delivery Date Settings V3.36</h1>
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
 					<p>Updates an order's delivery date given order number</p>
@@ -150,7 +150,7 @@
 				var products = JSON.parse(apiResponse);
 				krslog("Success: GET success (" + products.count + " / " + products.total + ")");				
 				for (var i = 0 ; i < products.items.length; i++){
-					$button = $('<button id="skucheckbox-' + products.items[i].id + '">');
+					$button = $('<button style="margin-left:30px;" id="skucheckbox-' + products.items[i].id + '">');
 					$button.addClass('skucheckbox');
 					$button.addClass('btn btn-default');
 					$button.text('Unregistered');
