--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V3.44</h1>
+				<h1>Delivery Date Settings V3.45</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -331,7 +331,7 @@
 		var list_of_sku = [];
 		$('.skucheckbox').each(function() {		
 			if ($(this).hasClass('btn-success')){
-			    list_of_sku.push(getIdFromSkuButton($(this));
+			    list_of_sku.push(getIdFromSkuButton($(this)));
 			}
 		});
 		var list_of_inv = [];
