--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V3.48</h1>
+				<h1>Delivery Date Settings V3.49</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -305,12 +305,13 @@
 		var date = $("#inventory_date").datepicker('getDate');
 		if (date){
 			EcwidApp.getAppPublicConfig(function(data) {
+				var epoch = date.getTime();
 				publicData = data
 				krslog("EcwidApp.getAppPublicConfig Success");
 				krslog(publicData);
 				var parsed_data = JSON.parse(data);
 				if ('sku' in parsed_data){
-					parsed_data = parsed_data.sku;
+					parsed_data = parsed_data.inv;
 					for (var i = 0; i < parsed_data.length; i++) { 
 						addInvItem(epoch,parsed_data[i],5);
 					}
